# Rubik-Cube

./: CMakeLists.txt  Log.txt  README.md  TODO.txt  example0003A.json  run.sh
cmake/: msvc.cmake
lib/pmdreader/: mmdadapter.cc
src/: CMakeLists.txt  config.h  cube.h  gui.cc  gui.h  handle_json.cc  handle_json.h  main.cc  procedure_geometry.cc  procedure_geometry.h  render_pass.cc  shader_uniform.h  solver.cc  solver.h  texture_to_render.cc  texture_to_render.h
src/shaders/: blending.vert  cube.frag  cube.vert  default.frag  preview.frag  preview.vert  sky.frag  sky.vert
